--- a/package.json
+++ b/package.json
@@ -3,17 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.12.0",
-    "@testing-library/react": "^11.2.6",
-    "@testing-library/user-event": "^12.8.3",
-    "antd": "^4.15.4",
-    "highcharts": "^9.0.1",
-    "highcharts-react-official": "^3.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "antd": "^4.21.7",
+    "highcharts": "^9.3.2",
+    "highcharts-react-official": "^3.1.0",
+    "react": "^18.0.1",
+    "react-dom": "^18.0.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.1"
+    "react-scripts": "^5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
